<resources>
    <string name="app_name">Karuna</string>
    <string name="ser0"> Services at Karuna- \n
        1. Shelter and Rescue Home for Animals.\n 2. Ambulatory Services.\n 3. Health Camps.\n 4. Humane Education.\n 5. Cruelty cases.\n 6. ABC / ARV Programme.\n 7. Night Emergency Services.\n 8. Snake care Service.\n
    </string>
    <string name="ser1">
        Today\'s need for the suffering stray animals is a shelter over their head and humane control over their increasing population. This is met to a certain extent by Karuna Animal Shelter cum Rescue Home at Veterinary College Campus, Hebbal, Bangalore - 24. This shelter accommodates about 400 animals of different species of any one time.\n
    </string>
    <string name="ser2">
        Ambulatory services are provided by KARUNA to pick up sick, injured, accident and disabled animals and they are shifted to Animal Shelter cum Rescue Home for treatment and necessary care. The Association has got well experienced Veterinary Doctors for conducting surgery, treatment and care of animals at the Animal Shelter.\n
    </string>
    <string name="ser3">KARUNA conducts a number of health and vaccination camps in rural areas to provide necessary medical assistance and guidance to the animal owners/ farmers. In coordination with its branches, Karuna also conducts a number of Educational Programmes and Awareness camps in rural areas of the state.\n</string>
    <string name="ser4">KARUNA conducts lectures, Audio Visual shows, Seminars, workshops to bring awareness about animal welfare for children, teaching fraternity, animal welfare volunteers, technocrats and the general public. KARUNA conducts Spot Painting , Elocution, Debate, Essay writing competitions for school students to bring awareness about Animal Welfare and to involve them in animal welfare movement. The association also conducts \'Pet Adoptathon\' programmes to provide dogs/cats/puppies/kittens and other animals to loving homes.\n</string>
    <string name="ser5">KARUNA attends a number of cruelty cases to stop the cruelties perpetrated on animals and educate people to take better care of their animals. Karuna in coordination with the police and forest department is trying its best to stop ritual sacrifice of animals at places of worship and in Villages. In cooperation with Government agencies, KARUNA is rescuing a number of wild animals which are rehabilitated in forest areas.\n</string>
    <string name="ser6">KARUNA conducts Animal Birth Control operations and Anti Rabies Vaccination for stray dogs/pups to control the increase in stray dog population and to prevent the dreaded disease Rabies. In cooperation with Bangalore Mahanagara Palike the Association conducts Anti Rabies Vaccination and licensing camps in various parts of Bangalore city.\n</string>
    <string name="ser7">To provide effective night time emergency services, the Association has identified veterinarians from different zones of Bangalore.\n</string>
    <string name="ser8">KARUNA is providing snake care services with the cooperation of volunteers and attending to distress calls from the public for catching/ retrieving snakes. After catching the snakes, they are rehabilitated in forest areas.\n</string>
    <string name="acthead2">Services rendered by KARUNA \n</string>
    <string name="actpara1">KARUNA a Century old animal welfare organization considers its first and foremost humane approach as the "Immediate response to the injured, to those with accidents and the uncared for dogs, puppies, cats and kittens" that are brought by animal lovers seen on roads and lanes of the City as its primary concern. To alleviate their pain and suffering by attending to them at once by way of providing first aid with whatever possible resources available at the shelter. \n</string>
    <string name="actpara2">1. To attend accident cases round the clock that are brought to the shelter and also pick up animals from the place of accident. \n\n
2. To Provide technical know how care and management of animals given for adoption. \n\n
3. To address all cruelty cases caused to animals under the PCA Act 1960 with the help of police authorities both inside the city and elsewhere. \n\n
4. To neuter street dog and cats that are brought to the shelter by Resident Welfare Associations and individuals. \n\n
5. To attend cases referred by KARUNA volunteers pertaining to Animal Welfare activities. \n\n
6. Organising vaccination and deworming of cats and dogs during national festivals and events of International Animal Welfare importance. \n\n
7. Organising vaccination of dogs and cats in animal health camps that are arranged in a few prominent places of Karnataka and other states of the country . \n\n
8. To inculcate compassion and love for animals in the young minds of growing children from their childhood. KARUNA arranges for Humane Education programmes "like Spot Painting, Essay writing, Elocution, Animal Costume and quiz competitions, emphasizing animal welfare subjects. \n
9. Vaccination against dreaded diseases like distemper, Leptospira etc., to all the Mudhol Dogs and puppies in Mudhol taluk of Bagalkot district, the beneficiaries being the care givers of these pets who hail from economically weaker sections, backward and socially neglected communities. \n
9a.To motivate farmers to take up agricultural subsidiary occupations, such as dairying, sheep, goat, pig and rabbit farming and also breeding of Indian dogs to improve their economic status. \n
10. Rescuing of animals in distress that are trapped in inescapable and hazardous places like Tunnels, drains, tree and building tops, rough terrain and deep wells to the extent possible with the cooperation of animal lovers. \n
</string>
    <string name="actpara3">11.	Providing emergency ferrying to reach sick and comatose small animals to hospital in extra ordinary cases and also providing transportation to a shelter and treatment to large animals like cattle brought to the shelter by animal welfare groups. \n\n
12. Helping animal lovers to adopt and nurture needy dogs and cats by arranging adoption camps and educating such adopters on pet management. \n\n
13. Occasionally there are late night distress calls from pet owners when their pets are sick, such calls have been attended by advising them suitably. \n\n
14. De-stressing "Pet therapy" by allowing pet owners and children to spend some time and play with our shelter dogs and cats which probably reduces their stress and rejuvenates them . \n\n
15. Providing feed and shelter to birds and small animals that have been rescued from trees, roof tops and other places till they are picked up by authorized NGOs. \n\n
 16. Adoption of pets is done after thoroughly confirming the family inclination towards pet keeping and subsequent follow-up by physical verification. \n\n
 17. Arranging short term training programmes for high school children, pet owners and public in pet keeping and animal welfare programmes. \n\n
18. Arranging outdoor trips to animal houses, farms, rehabilitation centers and Biological parks for school children and animal lovers. \n\n
19. Helping the declining population of sparrows and other birds by providing them food grains, water and perching facilities in some places to facilitate breeding. \n\n
20. To provide shelter for the animals rescued from ritual sacrifice. \n
</string>
    <string name="actpara4">21. To provide shelter and medical care for rescued domestic animals and birds. \n\n
22. We Provide \"Home Away Home\" facility for short periods to facilitate the owners to take short breaks. \n\n
23. Arranging full help to those that aspire to work as \"Animal Volunteers\" \n\n
24. KARUNA provides opportunity to volunteer services by post graduate students of Veterinary College to pursue their higher studies.\n\n
        25. KARUNA conducts number of programmes to bring awareness about Animal Welfare and Ritual sacrifice of animals. \n\n
26. Seminars are organized about awareness of animals being used for research. \n\n
27. KARUNA educates children and general public against use of animals in sports and entertainment and to adhere to the provisions of PCA Act 1960. \n\n
28. Nithya Kaarunya feeding programme of shelter animals under which a person can feed animals on occasions such as their birthdays, anniversaries etc., of their beloved ones and pets once a year. \n\n
29. Motivating animal owners to be responsible pet owners by following civic and Government rules and regulation. \n\n
30. Periodical organisation of workshops and training camps for the benefit of pet lovers to learn proper management practices. \n
</string>
    <string name="actpara5">
        31. KARUNA provides place for the respectful burial of pet animals with the help of animal volunteers. \n\n
32. KARUNA provides shelter for retired police dogs and animals rescued from the houses of persons involved in police cases when they are in custody. \n\n
33. KARUNA educates animal owners in proper transportation of animals by following rules and regulations to provide comfortable and safe journey of animals. \n\n
34. KARUNA also oversees animals used in film industry so that no cruelty is inflicted and to follow the PCA Act 1960 during the shooting of films. \n\n
35. KARUNA in co operation with Veterinary College provides blood transfusion facility to needy animals.\n\n
        36. KARUNA liaises with Forest department, BBMP and Specialized NGOs for the rescue of Wildlife. \n\n
37. Any unjust Act on animals or Wildlife which interferes in the well being of animals is attended. \n\n
38. People can donate at the shelter in cash-or kind for feeding and maintenance of animals. \n\n
39. KARUNA urges the authorities to take up construction of modern abattoirs to reduce the suffering of food animals and adopt humane methods of slaughter and use transportation specially meant for animals. \n\n
40. Society at large is required to see that animals live comfortably and happily on par with themselves. \n
</string>
    <string name="pattext">Animal Rights and Welfare Enthusiast, President - Society for Indian Breeds of Dogs, Patron -Mysore Kennel Club, Chairman and Managing Trustee - KARUNA Trust for National Progress, Founder President - Pet Practitioners Association of Karnataka, Member - State Animal Welfare Board, Former Member - Animal Welfare Board of India, Former Vice President - Veterinary Council of India, Former Secretary General - Indian Veterinary Association.\n</string>
    <string name="prestext">Animal Welfare and Social Activist, Lion and Lioness Past Associate Chairperson Dist 317F Members, Member Trustee - KTNP, involved in Welfare of Rural Children, Homemaker.\n</string>
    <string name="otext2">Actively involved in the Animal Welfare Movement, Vice Patron- Mysore Kennel club, Vice President and trustee - Karuna Trust for National Progress (KNTP). Vice Patron - Society for Indian Breeds of Dogs\n</string>
    <string name="o3">Actively involved in the Animal Welfare Movement, Advisory Committee Member and Founder Secretary, Society for Indian Breeds of Dogs. Former Editor- Pet India.\n</string>
    <string name="o4">Animal Welfare Activist, President -UAS Campus School, Former Secretary UAS Alumni Association, Professor Agricultural extension GKVK, Hon. Secretary - Karuna Trust for National Progress.\n</string>
    <string name="o5">Animal Welfare Activist, Social worker, Trustee - Karuna Trust for National Progress, Former Public Relations Officer - KPCL.\n</string>
    <string name="o6"><![CDATA[Former Officer of the Department of Animal Husbandry & Veterinary Services, Animal Welfare Activist and President, Society for Indian breeds of dogs.\n]]></string>
    <string name="o7">Rural Anirnal Welfare Activist, involved in charitable and endowment trusts. Supports Education of BPL children in rural areas.\n</string>
</resources>