<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities"
    android:background="@color/colorAccentLight">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contacthead"
            android:layout_width="match_parent"
            android:layout_height="@dimen/abc_action_bar_default_height_material"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal|center_vertical"
            android:text="ACTIVITIES"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="cursive"
            tools:ignore="PrivateResource" />

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/actpara1"
            android:textSize="16sp"
            />

        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/head1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/acthead2"
            android:textSize="23sp"
            android:textStyle="bold"/>

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/actpara2"
            android:textSize="16sp"
            android:lineSpacingExtra="10dp"/>

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/actpara3"
            android:textSize="16sp"
            android:lineSpacingExtra="10dp" />

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/actpara4"
            android:textSize="16sp"
            android:lineSpacingExtra="10dp"/>

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/actpara5"
            android:textSize="16sp"
            android:lineSpacingExtra="10dp"/>
    </LinearLayout>

</ScrollView>